# testovoe_bauart

./: .env  .gitignore  Dockerfile  PurchasingExample correct.csv  docker-compose.yml  pyproject.toml
src/: main.py  models.py  service.py
src/connections/: minio.py
src/core/: helpers.py  repository.py  settings.py
